tests/errors/cpp_err6.f90
program cpp_err6
#if 1 + (1+2 (
#endif
print *, 'OK'
end program
